--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "to-do-list",
+  "type": "module",
+  "name": "segment-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,10 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
@@ -36,6 +41,7 @@
     "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "globals": "^15.3.0",
+    "ts-node": "^10.9.2",
     "typescript-eslint": "^7.10.0"
   },
   "scripts": {
@@ -43,7 +49,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint 'src/**/*.{ts,tsx}'"
+    "lint": "eslint 'src/**/*.{ts,tsx}'",
+    "start-server": "node server/server.js"
   },
   "browserslist": {
     "production": [
