--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
